idk but 29 files was not committed...

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <modules>
         <module>bot</module>
         <module>scrapper</module>
+        <module>models</module>
     </modules>
 
     <dependencyManagement>
