--- a/scrapper/src/main/resources/application.yml
+++ b/scrapper/src/main/resources/application.yml
@@ -18,3 +18,8 @@ logging:
 client:
   github-url: unset
   stack-overflow-url: unset
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui
+    enabled: true
