--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -8,7 +8,12 @@ spring:
     time-zone: UTC
 
 server:
-  port: 8090
+  port: 8080
 
 logging:
   config: classpath:log4j2-plain.xml
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui
+    enabled: true
