--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -100,6 +100,11 @@
             <version>3.19.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
