written homework No.7

--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -7,6 +7,27 @@ spring:
     name: bot
   jackson:
     time-zone: UTC
+  cache:
+    cache-names:
+      - ${rate.spring.cache.name:rate-limit-bucket}
+    jcache:
+      provider: com.github.benmanes.caffeine.jcache.spi.CaffeineCachingProvider
+    caffeine:
+      spec: maximumSize=100000,expireAfterAccess=3600s
+
+bucket4j:
+  enabled: true
+  filters:
+    - cache-name: ${rate.bucket.cache.name:rate-limit-bucket}
+      url: .*
+      http-response-body: "{ \"status\": 429, \"error\": \"Too Many Requests\", \"message\": \"You have exhausted your API Request Quota\" }"
+      rate-limits:
+        - bandwidths:
+            - capacity: ${rate.limit.capacity:10}
+              time: ${rate.limit.time:1}
+              unit: ${rate.limit.unit:seconds}
+          cache-key: "getHeader(\"X-Forwarded-For\")"
+  cache-to-use: jcache
 
 server:
   port: 8090
