--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
         <!-- Spring -->
         <spring-boot.version>3.2.2</spring-boot.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.3.0</springdoc-openapi-starter-webmvc-ui.version>
+
+        <!-- bucket4j -->
+        <bucket4j.version>8.9.0</bucket4j.version>
+        <bucket4j-spring-boot-starter.version>0.12.6</bucket4j-spring-boot-starter.version>
+
+        <!-- cache -->
+        <caffeine.version>3.1.8</caffeine.version>
 
         <!-- Other -->
         <jetbrains-annotations.version>24.1.0</jetbrains-annotations.version>
