--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -32,6 +32,39 @@ spring:
 
 
 
+server:
+  port: 8090
+
+
+
+management:
+  server:
+    port: 8091
+
+  endpoints:
+    web:
+      base-path: /
+      path-mapping:
+        prometheus: metrics
+      exposure:
+        include: health, prometheus, info
+    enabled-by-default: false
+
+  endpoint:
+    health:
+      enabled: true
+    info:
+      enabled: true
+    prometheus:
+      enabled: true
+
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
+
+
+
 bucket4j:
   enabled: true
 
@@ -47,11 +80,6 @@ bucket4j:
           cache-key: "getHeader(\"X-Forwarded-For\")"
 
   cache-to-use: jcache
-
-
-
-server:
-  port: 8090
 
 
 
