--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -29,7 +29,7 @@ jobs:
           cache: maven
 
       - name: maven build
-        run: mvn -DskipTests -pl bot -am package
+        run: mvn -pl bot -am package
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
